language/move-compiler/tests/move_check/parser/address_misspelled.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/address_misspelled.move:1:9
  │
1 │ addrexx 0x1:
  │         ^^^
  │         │
  │         Unexpected '0x1'
  │         Expected ';'

